--- a/main.html
+++ b/main.html
@@ -6,6 +6,8 @@
     <title>하하하</title>
 </head>
 <body>
-    <script type="application/javascript" src="js/extlib/require.js" data-main="js/app"></script>
+    <div id="content-wrapper"></div>
+    <script type="application/javascript"
+            src="js/extlib/require.js" data-main="js/app"></script>
 </body>
 </html>
