--- a/main.html
+++ b/main.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" media="all" href="css/css.css">
-    <title>하하하</title>
 </head>
 <body>
-    <div id="content-wrapper"></div>
-    <script type="application/javascript"
-            src="js/extlib/require.js" data-main="js/app"></script>
+    <div id="content-wrapper">
+        <section id="image-list"></section>
+    </div>
+    <script type="application/javascript" src="js/config/requirejs-config.js"></script>
+    <script type="application/javascript" src="js/extlib/require.js" data-main="app"></script>
 </body>
 </html>
